syntax = "proto3";

package dankfolio.v1;

option go_package = "github.com/nicolas-martin/dankfolio/backend/gen/proto/go/dankfolio/v1;dankfoliov1";

// WalletService provides operations for managing Solana wallets
service WalletService {
  // GetWalletBalances returns the balances for all coins in a wallet
  rpc GetWalletBalances(GetWalletBalancesRequest) returns (GetWalletBalancesResponse);

  // RegisterWallet registers a wallet by its public key (client-side generated)
  rpc RegisterWallet(RegisterWalletRequest) returns (RegisterWalletResponse);

  // PrepareTransfer prepares an unsigned transfer transaction
  rpc PrepareTransfer(PrepareTransferRequest) returns (PrepareTransferResponse);

  // SubmitTransfer submits a signed transfer transaction
  rpc SubmitTransfer(SubmitTransferRequest) returns (SubmitTransferResponse);

  // GetPortfolioPnL returns the overall profit and loss for a wallet
  rpc GetPortfolioPnL(GetPortfolioPnLRequest) returns (GetPortfolioPnLResponse);
}

// Balance represents information about a coin balance
message Balance {
  string id = 1;           // Coin mint address or identifier
  double amount = 2;       // Coin amount
}

// WalletBalance represents a wallet's complete balance
message WalletBalance {
  repeated Balance balances = 1;  // List of coin balances
}

// GetWalletBalancesRequest is the request for GetWalletBalances
message GetWalletBalancesRequest {
  string address = 1;  // Solana wallet address
}

// GetWalletBalancesResponse is the response for GetWalletBalances
message GetWalletBalancesResponse {
  WalletBalance wallet_balance = 1;
}

// RegisterWalletRequest is the request for RegisterWallet
message RegisterWalletRequest {
  string public_key = 1;   // Wallet's public key (generated client-side)
}

// RegisterWalletResponse is the response for RegisterWallet
message RegisterWalletResponse {
  bool success = 1;        // Whether registration was successful
  string message = 2;      // Success or error message
}

// PrepareTransferRequest is the request for preparing a transfer
message PrepareTransferRequest {
  string from_address = 1;
  string to_address = 2;
  string coin_mint = 3;  // Optional, empty for SOL
  double amount = 4;
}

// PrepareTransferResponse is the response with the unsigned transaction
message PrepareTransferResponse {
  string unsigned_transaction = 1;
}

// SubmitTransferRequest is the request for submitting a signed transfer
message SubmitTransferRequest {
  string signed_transaction = 1;
  string unsigned_transaction = 2; // used to retreive the record in the backend
}

// SubmitTransferResponse is the response after submitting a transfer
message SubmitTransferResponse {
  string transaction_hash = 1;
}

// GetPortfolioPnLRequest is the request for GetPortfolioPnL
message GetPortfolioPnLRequest {
  string wallet_address = 1;  // Solana wallet address
}

// TokenPnL represents profit and loss data for a single token
message TokenPnL {
  string coin_id = 1;             // Coin mint address
  string symbol = 2;              // Token symbol
  string name = 3;                // Token name
  double amount_held = 4;         // Current amount held
  double cost_basis = 5;          // Average cost per token
  double current_price = 6;       // Current price per token
  double current_value = 7;       // Current total value (amount * price)
  double unrealized_pnl = 8;      // Unrealized profit/loss
  double pnl_percentage = 9;      // Percentage gain/loss
  bool has_purchase_data = 10;    // Whether we have transaction history
}

// GetPortfolioPnLResponse contains overall portfolio PnL and per-token breakdown
message GetPortfolioPnLResponse {
  double total_portfolio_value = 1;   // Current total value
  double total_cost_basis = 2;        // Total amount invested
  double total_unrealized_pnl = 3;    // Total unrealized profit/loss
  double total_pnl_percentage = 4;    // Overall percentage gain/loss
  int32 total_holdings = 5;           // Number of tokens held
  repeated TokenPnL token_pnls = 6;   // PnL data for each token
} 
